{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 20,
  "lineage": "1d981a26-5462-670f-729d-8853708c733b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.202.98.26",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-12-12T03:11:49.333-08:00",
            "id": "projects/focus-mechanic-295618/regions/us-central1/addresses/flaskapp-dev-nat-ip",
            "name": "flaskapp-dev-nat-ip",
            "network_tier": "PREMIUM",
            "project": "focus-mechanic-295618",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/regions/us-central1/addresses/flaskapp-dev-nat-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-12-12T03:28:33.302-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/focus-mechanic-295618/global/firewalls/flaskapp-dev-fw-allow-http",
            "log_config": [],
            "name": "flaskapp-dev-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-dev-vpc",
            "priority": 1000,
            "project": "focus-mechanic-295618",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/firewalls/flaskapp-dev-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-12-12T03:28:33.064-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/focus-mechanic-295618/global/firewalls/flaskapp-dev-fw-allow-https",
            "log_config": [],
            "name": "flaskapp-dev-fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-dev-vpc",
            "priority": 1000,
            "project": "focus-mechanic-295618",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/firewalls/flaskapp-dev-fw-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-12-12T03:28:32.804-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/focus-mechanic-295618/global/firewalls/flaskapp-dev-fw-allow-internal",
            "log_config": [],
            "name": "flaskapp-dev-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-dev-vpc",
            "priority": 1000,
            "project": "focus-mechanic-295618",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/firewalls/flaskapp-dev-fw-allow-internal",
            "source_ranges": [
              "10.128.0.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-12-12T03:28:33.354-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/focus-mechanic-295618/global/firewalls/flaskapp-dev-fw-allow-rdp",
            "log_config": [],
            "name": "flaskapp-dev-fw-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-dev-vpc",
            "priority": 1000,
            "project": "focus-mechanic-295618",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/firewalls/flaskapp-dev-fw-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "rdp"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-12-12T03:28:33.487-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/focus-mechanic-295618/global/firewalls/flaskapp-dev-fw-allow-ssh",
            "log_config": [],
            "name": "flaskapp-dev-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-dev-vpc",
            "priority": 1000,
            "project": "focus-mechanic-295618",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/firewalls/flaskapp-dev-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.196.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2020-12-12T03:28:32.891-08:00",
            "id": "projects/focus-mechanic-295618/global/addresses/flaskapp-dev-private-ip-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "flaskapp-dev-private-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-dev-vpc",
            "prefix_length": 16,
            "project": "focus-mechanic-295618",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/addresses/flaskapp-dev-private-ip-address"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "global_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20201211a",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/zones/us-central1-b/disks/flaskapp-dev-vm-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "flaskapp-dev-vm1.test",
            "id": "projects/focus-mechanic-295618/zones/us-central1-b/instances/flaskapp-dev-vm-1",
            "instance_id": "8282117084091586453",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "ViqQ-mWSzJ0=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python-pip rsync; pip install flask; sudo apt install mysql-client; sudo apt-get install python-dev default-libmysqlclient-dev libssl-dev; pip install --user flask-mysqldb",
            "name": "flaskapp-dev-vm-1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-dev-vpc",
                "network_ip": "10.128.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/regions/us-central1/subnetworks/flaskapp-dev-private-subnet-1",
                "subnetwork_project": "focus-mechanic-295618"
              }
            ],
            "project": "focus-mechanic-295618",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/zones/us-central1-b/instances/flaskapp-dev-vm-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/focus-mechanic-295618/global/networks/flaskapp-dev-vpc",
            "mtu": 0,
            "name": "flaskapp-dev-vpc",
            "project": "focus-mechanic-295618",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-dev-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-12-12T03:28:32.984-08:00",
            "id": "projects/focus-mechanic-295618/regions/us-central1/routers/flaskapp-dev-nat-router",
            "name": "flaskapp-dev-nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-dev-vpc",
            "project": "focus-mechanic-295618",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/regions/us-central1/routers/flaskapp-dev-nat-router"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "focus-mechanic-295618/us-central1/flaskapp-dev-nat-router/flaskapp-dev-nat-gateway",
            "min_ports_per_vm": 0,
            "name": "flaskapp-dev-nat-gateway",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/regions/us-central1/addresses/flaskapp-dev-nat-ip"
            ],
            "project": "focus-mechanic-295618",
            "router": "flaskapp-dev-nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.nat_ip",
            "google_compute_network.vpc",
            "google_compute_router.nat-router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-12-12T03:28:33.213-08:00",
            "gateway_address": "10.128.0.1",
            "id": "projects/focus-mechanic-295618/regions/us-central1/subnetworks/flaskapp-dev-private-subnet-1",
            "ip_cidr_range": "10.128.0.0/20",
            "name": "flaskapp-dev-private-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/global/networks/flaskapp-dev-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "focus-mechanic-295618",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/focus-mechanic-295618/regions/us-central1/subnetworks/flaskapp-dev-private-subnet-1"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "target_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    }
  ]
}